src/objects/Core_IPS_Map_Par_Line_Item__c.object
<CustomObject>
    <description>This allows an org admin to specify the products their org supports</description>
    <fields>
        <fullName>Core_Account_Geo__c</fullName>
        <description>Geo value of the Account</description>
        <formula>TEXT(Core_Account__r.Core_Geo__c)</formula>
        <inlineHelpText>Geo value of the Account</inlineHelpText>
        <label>Account Geo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Account_Sub_Geo__c</fullName>
        <description>Sub Geo value of the Account</description>
        <formula>TEXT( Core_Account__r.Core_Sub_Geo__c)</formula>
        <inlineHelpText>Sub Geo value of the Account</inlineHelpText>
        <label>Account Sub Geo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <inlineHelpText>Account that Product Access will apply to</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Access Line Items</relationshipLabel>
        <relationshipName>Map_Par_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Approval_Type__c</fullName>
        <description>consider a formula

Indicates if the PAR line item requires approval or will automatically be approved, based off the access flag of the Supported Product.</description>
        <inlineHelpText>Does the PAR Line Item require approval or will it be automatically approved?</inlineHelpText>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Auto Approve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Approving_Product_Organization__c</fullName>
        <description>Unique ID for the Support Org that supports the Supported Product</description>
        <formula>Core_MAP_PAR__r.Core_Product_Organization__r.Name</formula>
        <inlineHelpText>Unique ID for the Support Org that supports the Supported Product</inlineHelpText>
        <label>Support Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Asset_Status__c</fullName>
        <description>Derived status of the Asset referred to by the current Product Access Line Item</description>
        <formula>IF (ISPICKVAL( Core_Status__c,&quot;Pending&quot;),&quot;N/A&quot;, IF (Core_Intel_Product__r.Id = NULL,&quot;N/A&quot;,
	CASE(Core_Intel_Product__r.Status,&quot;Obsolete&quot;,&quot;INACTIVE&quot;,&quot;Inactive&quot;,&quot;INACTIVE&quot;,
	&quot;Installed&quot;,&quot;ACTIVE&quot;,&quot;Active&quot;,&quot;ACTIVE&quot;,
	&quot;&quot;,&quot;ACTIVE&quot;,
	&quot;ERROR&quot;)))</formula>
        <inlineHelpText>Status (if available) of the Asset referred to by the current Product Access Line Item</inlineHelpText>
        <label>Asset Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Intel_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The asset referred to by this Product Access Line Item</description>
        <inlineHelpText>The asset referred to by this Product Access Line Item</inlineHelpText>
        <label>Intel Product</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Product Access Line Items</relationshipLabel>
        <relationshipName>Product_Access_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_LI_Approver__c</fullName>
        <description>Name of the user that approved or rejected the PAR line item</description>
        <inlineHelpText>Name of the user that approved or rejected the PAR line item</inlineHelpText>
        <label>Approver</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_LI_Decision_Date__c</fullName>
        <description>Date/time when a PAR Line Item is Approved/Rejected</description>
        <inlineHelpText>Date/time when a PAR Line Item is Approved/Rejected</inlineHelpText>
        <label>Decision Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Core_Line_Item_Approval_Status__c</fullName>
        <description>Approval Status of this Line Item (only for PAR Line Items that require approval)</description>
        <inlineHelpText>Approval Status of this Line Item (only for PAR Line Items that require approval)</inlineHelpText>
        <label>Line Item Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_MAP_PAR__c</fullName>
        <description>Product Access Record Header.  Used for both MAP &amp; PAR</description>
        <inlineHelpText>Product Access Record (Header)</inlineHelpText>
        <label>MAP/PAR</label>
        <referenceTo>Core_IPS_MAP_PAR__c</referenceTo>
        <relationshipLabel>Product Access Line Items</relationshipLabel>
        <relationshipName>Map_Par_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_Pending_Duration__c</fullName>
        <description>Time (hours) that a PAR line item was in Pending status (awaiting Approval or Rejection).</description>
        <formula>IF(ISPICKVAL(Core_Line_Item_Approval_Status__c, &quot;Pending&quot;), (NOW()-CreatedDate)*24,  (Core_LI_Decision_Date__c-CreatedDate)*24 )</formula>
        <inlineHelpText># of hours a PAR Line Item spent pending Approval or Rejection</inlineHelpText>
        <label>Pending Duration (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Status__c</fullName>
        <description>Status of the MAP/PAR Line Item - Different from Line Item Approval Status.</description>
        <inlineHelpText>Active, Inactive, or Pending.  Pending can only apply to PAR.</inlineHelpText>
        <label>Line Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>INACTIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Submitter_Comments__c</fullName>
        <description>Comments submitted by PAR creator.  Intended to provide context/information to the approving Support Org Admin.</description>
        <inlineHelpText>Comments submitted by PAR creator</inlineHelpText>
        <label>Submitter Comments</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Support_Org_Name__c</fullName>
        <description>Name of the Support Org that supports the Supported Product</description>
        <formula>Core_MAP_PAR__r.Core_Product_Organization__r.Core_IPS_Support_Org_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Support Org that supports the Supported Product</inlineHelpText>
        <label>Support Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Supported_Product_EOIS__c</fullName>
        <description>Indicates if the Supported Product is no longer being supported by the Support Org. When EOIS=TRUE, the product is no longer supported.</description>
        <formula>Core_Supported_Product__r.Core_EOIS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When EOIS=TRUE it indicates that the Supported Product is no longer supported by the Support Org</inlineHelpText>
        <label>Supported Product EOIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Supported_Product_Name__c</fullName>
        <formula>Core_Supported_Product__r.Core_Supported_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supported Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Supported_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Supported Product that the Product Access Line Item will grant access to.</description>
        <inlineHelpText>Supported Product the Product Access Line Item refers to</inlineHelpText>
        <label>Supported Product</label>
        <referenceTo>Core_IPS_Supported_Product__c</referenceTo>
        <relationshipLabel>Product Access Line Items</relationshipLabel>
        <relationshipName>Map_Par_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_isPARRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>see if this can be deleted

Boolean used by MAP/PAR VF page logic to determine if an asset should be created or not.   If we keep this, we should consider renaming it to a more useful name.</description>
        <label>isPARRequest</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Access Line Item</label>
    <nameField>
        <displayFormat>IAL-{0000000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Access Line Items</pluralLabel>
    <recordTypes>
        <fullName>MAP</fullName>
        <active>true</active>
        <description>Record Type for Managed Access Policies (MAP)</description>
        <label>MAP</label>
    </recordTypes>
    <recordTypes>
        <fullName>PAR</fullName>
        <active>true</active>
        <description>Record Type for Product Access Requests (PAR)</description>
        <label>PAR</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Core_Account_Required</fullName>
        <active>true</active>
        <description>Account is required upon Line Item creation.   This should prevent users from creating Line Items via the OOTB screens</description>
        <errorConditionFormula>Core_Account__r.Name = NULL</errorConditionFormula>
        <errorMessage>ERROR:  No Account Name value exists!

PLEASE NOTE:  You cannot manually create new Product Access Line Items through this screen.  Instead, you must add Accounts to the Accounts List or you must add products to the Products List.</errorMessage>
    </validationRules>
</CustomObject>